# ToDone

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: actions.yaml
src/: main.rs
src/assets/icons/: mod.rs
src/core/: mod.rs  ui.rs  update.rs
src/core/files/: mod.rs
src/core/functions/: mod.rs
src/core/functions/files/: get.rs  save.rs
src/core/functions/settings/: get.rs  save.rs
src/core/functions/tasks/: create.rs  get.rs  save.rs
src/core/settings/: get.rs  mod.rs  save.rs
src/core/tasks/: create.rs  get.rs  mod.rs  save.rs
src/core/update/: menu.rs  mod.rs  settings.rs  tasks.rs  tasks_list.rs
src/ui/: mod.rs  styles.rs  view.rs
src/ui/components/: headers.rs  inputs.rs  mod.rs
src/ui/components/buttons/: button.rs  icon.rs  mod.rs
src/ui/components/elements/: toggle.rs
src/ui/components/tasks_list/: task.rs
src/ui/pages/: menu.rs  mod.rs  panic.rs  settings.rs
src/ui/pages/tasks/: edit_task.rs  list.rs  mod.rs  new_task.rs
