[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["svg"]}

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

uuid = { version = "1.16.0", features = ["fast-rng", "v7"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"